<resources>

    <string name="app_name">MyExpenses</string>
    <string name="list_title">My Expenses</string>
    <string name="add_title">New Expense</string>
    <string name="edit_title">Edit Expense</string>
    <string name="about_title">About the App</string>
    <string name="settings_title">Settings</string>

    <string name="menu_add">Add</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <string name="form_description_label">Expense Description</string>
    <string name="form_description_hint">Ex: Work lunch</string>
    <string name="form_value_label">Value</string>
    <string name="form_value_hint">Ex: 25.50</string>
    <string name="form_paid_check">Expense already paid?</string>
    <string name="form_category_label">Category</string>
    <string name="form_payment_label">Payment Method</string>

    <string name="category_food">Food</string>
    <string name="category_transport">Transport</string>
    <string name="category_health">Health</string>
    <string name="category_leisure">Leisure</string>
    <string name="category_bills">Bills</string>
    <string name="category_education">Education</string>
    <string name="category_other">Other</string>

    <string name="payment_credit_card">Credit Card</string>
    <string name="payment_debit_card">Debit Card</string>
    <string name="payment_cash">Cash</string>
    <string name="payment_pix">PIX</string>
    <string name="payment_bank_slip">Bank Slip</string>
    <string name="pendente">Pending</string>

    <string name="toast_cleared">Fields cleared!</string>
    <string name="toast_fill_all_fields">Please, fill all fields.</string>
    <string name="toast_invalid_value">Invalid value.</string>
    <string name="toast_expense_details">Description: %1$s\nValue: $ %2$.2f\nCategory: %3$s</string>

    <string name="settings_sort_order">Sort Order</string>
    <string name="settings_sort_by_description">By Description (A-Z)</string>
    <string name="settings_sort_by_value">By Value (Highest First)</string>

    <string name="about_university">UTFPR - Câmpus Cornélio Procópio</string>
    <string name="about_app_description">This is a personal expense tracking application, developed as part of the Mobile Device Programming course.</string>
    <string name="about_developed_by">Developed by:</string>
    <string name="about_author_name">Name: Allan Vinicios Ferraz Santos</string>
    <string name="about_author_course">Course: Computer Engineering</string>
    <string name="about_author_email">Email: allanvinicios@alunos.utfpr.edu.br</string>

    <string name="form_date_label">Date</string>
    <string name="form_date_hint">Click to select date</string>

    <string name="dialog_delete_title">Confirm Deletion</string>
    <string name="dialog_delete_message">Are you sure you want to delete the expense \'%1$s\'?</string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="toast_deleted">Expense deleted!</string>
    <string name="toast_delete_error">Error selecting item for deletion.</string>
    <string name="category_unknown">Unknown Category</string>
    <string name="category_list_title">Categories</string>
</resources>

