<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".AutoriaActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/about_title"
        app:srcCompat="@drawable/logo_utfpr" />

    <TextView
        android:id="@+id/textViewNomeUniversidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_university"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewDescricaoApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/about_app_description"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewLabelAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/about_developed_by"
        android:textSize="16sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textViewNomeAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_author_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewCursoAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_author_course"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewEmailAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_author_email"
        android:textSize="16sp" />

</LinearLayout>

