<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_sort_order"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupOrdenacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/radioButtonPorDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_sort_by_description" />

        <RadioButton
            android:id="@+id/radioButtonPorValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_sort_by_value" />

    </RadioGroup>

</LinearLayout>

